@@ -38,6 +38,7 @@ bind = $mainMod CTRL, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh select
 bind = $mainMod CTRL, RETURN, exec, rofi -show drun -replace -i
 bind = $mainMod CTRL, H, exec, ~/dotfiles/hypr/scripts/keybindings.sh
 bind = $mainMod SHIFT, B, exec, ~/dotfiles/waybar/launch.sh
+bind = $mainMod CTRL, B, exec, ~/dotfiles/waybar/toggle.sh
 bind = $mainMod SHIFT, R, exec, ~/dotfiles/hypr/scripts/loadconfig.sh
 bind = $mainMod CTRL, F, exec, ~/dotfiles/scripts/filemanager.sh
 bind = $mainMod CTRL, C, exec, ~/dotfiles/scripts/cliphist.sh
